# face-mestrado

./: .gitignore  constants.py  features.py  pyproject.toml  split_data.py  test_histogram.py
features/: train-0.pickle
grids/: rf.json
utils/: data.py  facenet.py  feature.py  histogram.py  map.py  optimizer.py  schemas.py  tools.py  user.py
