[tool.poetry]
name = "face-mestrado"
version = "0.1.0"
description = ""
authors = ["yalr098 <yvesromero1998@gmail.com>"]
readme = "README.md"
packages = [{include = "face_mestrado"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^1.13.1"
scikit-learn = "^1.2.1"
torchvision = "^0.14.1"
facenet-pytorch = "^2.5.2"
opencv-python = "^4.7.0.72"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
