[tool.poetry]
name = "face-mestrado"
version = "0.1.0"
description = ""
authors = ["yalr098 <yvesromero1998@gmail.com>"]
readme = "README.md"
packages = [{include = "face_mestrado"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
scikit-learn = "^1.2.1"
torchvision = "^0.14.1"
opencv-python = "^4.7.0.72"
pydantic = "^1.10.5"
tensorflow = "^2.11.0"
keras = "^2.11.0"
pandas = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
